--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "heroicons": "^2.0.18",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
