--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-14-template-tailwind",
+  "name": "djbasstian.com",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "heroicons": "^2.0.18",
     "next": "14.0.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
