--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "framer-motion": "^12.6.3",
     "heroicons": "^2.0.18",
-    "next": "14.0.3",
+    "next": "^15.2.4",
     "nodemailer": "^6.9.13",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.0.1",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "^15.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
