--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.6.3",
     "heroicons": "^2.0.18",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.9.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -24,10 +25,14 @@
     "resend": "^4.2.0"
   },
   "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^15.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.8.3"
   }
 }
